# Smart-Mobility-Engineering-Lab

./: .gitignore  README.md  Week3_lab1
Week_3/day_2/: README.md  first_lab_practice.sh
Week_4_lab_1/: Readme.md  launching_nodes.sh  recording_and_playing_back.sh  understanding_nodes.sh  understanding_parameters.sh  understanding_services.sh  understanding_topics.sh  using_rqt_console.sh  using_turtelism.sh
final_project/ros2_ws/install/my_weather_pkg/share/my_weather_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh  weather_launch.py
final_project/ros2_ws/src/temperature_sensor_pkg/: package.xml  setup.cfg  setup.py
final_project/ros2_ws/src/temperature_sensor_pkg/temperature_sensor_pkg/: temperature_publisher.py
final_project/ros2_ws/src/temperature_sensor_pkg/temperature_sensor_pkg/launch/: temperature_publisher_launch.py
final_project/ros2_ws/src/temperature_sensor_pkg/temperature_sensor_pkg/srv/: GetTemperature.srv
final_project/ros2_ws/src/temperature_sensor_pkg/temperature_sensor_pkg/srv/install/: local_setup.sh  setup.sh
final_project/ros2_ws/src/temperature_sensor_pkg/temperature_sensor_pkg/srv/log/: latest_build
midterm_assignment/: README.md
week_4_lab2/: C++_publisher_subscriber.sh  Readme.md  creating_workspace.sh  making_packages_using_colcon.sh  python_subscriber_publisher  using_Colon.sh  working_with_c++.sh
week_5_lab/: action_client_C++.sh  create_action.sh  launch.sh  manage_dependencies.sh  run_composition_demos.sh  run_fibonacci_action_python.sh  testing.sh  urdf.sh
week_6/: CMakeLists.txt  README.md  custom_memory_allocator.sh  dds_discovery_server.sh  enabling_topic_statistics.sh  recording_bag.sh
week_6/bag_recorder_nodes/: CMakeLists.txt
week_6/cpp_pubsub/: CMakeLists.txt  package.xml
week_6/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
week_6/log/: latest_build
week_7/: Readme.md
week_7/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
week_7/math_operation/src/math_operations_action/: CMakeLists.txt  setup.cfg  setup.py
week_7/math_operation/src/math_operations_action/action/: MathOperation.action
week_7/math_operation/src/math_operations_action/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
week_7/math_operation/src/math_operations_action/install/math_operations_action/share/math_operations_action/: package.ps1  package.sh  package.zsh
week_7/math_operation/src/math_operations_action/log/: latest_build
week_7/math_operation/src/math_operations_action/scripts/: math_operations_action_client.py  math_operations_action_server.py
(+148 files in other folders)
