<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>temperature_sensor_pkg</name>
  <version>0.0.0</version>
  <description>ROS 2 package for temperature sensor</description>
  <maintainer email="asadbekbosss@gmail.com">aaaa</maintainer>
  <license>Apache License 2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>


  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>ros2run</build_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
