<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_weather_pkg</name>
  <version>0.0.0</version>
  <description>Examples of minimal publisher/subscriber using rclpy</description>
  <maintainer email="asadbekbosss@gmail.com">aaaa</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>ros2run</build_depend>
  <build_depend>launch_ros</build_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake</test_depend>
  <test_depend>ament_index_python</test_depend>
  <test_depend>pytest</test_depend>
  <test_depend>pytest-cov</test_depend>

  <export>
    <build_type>ament_python</build_type>
  

  </export>
</package>
